2006-01-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/cellrend/multiline.py
	* lib/gaupol/gtk/cellrend/text.py:
	  Removed __gtype_name__ class attributes to get testing to work
	  without RunTimeErrors.

2006-01-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Added option to execute modules.

	* lib/gaupol/base/clipboard.py:
	* lib/gaupol/base/util/wwwlib.py:
	  Removed psyco imports.

	* lib/gaupol/gtk/cellrend/integer.py:
	* lib/gaupol/gtk/cellrend/multiline.py:
	* lib/gaupol/gtk/cellrend/text.py:
	* lib/gaupol/gtk/cellrend/time.py:
	  Threw out entries.
	  Added testing.
	  Cosmetic changes.

	* lib/gaupol/gtk/entries:
	* lib/gaupol/gtk/entries/__init__.py:
	* lib/gaupol/gtk/entries/integer.py:
	* lib/gaupol/gtk/entries/time.py:
	  New files.

2006-01-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	RELEASE 0.3.4

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.3.4.

2006-01-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/files/subviewer2.py:
	  Allow malformed header.

2006-01-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* MANIFEST.in:
	* setup.py:
	  Added format documentation files.

	* doc/formats:
	* doc/formats/README:
	* doc/formats/microdvd.html:
	* doc/formats/mpl2.txt:
	* doc/formats/subrip.txt:
	* doc/formats/subviewer2.txt:
	  New files to document subtitle file formats.

	* lib/gaupol/base/files/microdvd.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/files/subviewer2.py:
	* lib/gaupol/base/tags/microdvd.py:
	* lib/gaupol/base/tags/mpl2.py:
	* lib/gaupol/base/tags/subrip.py:
	* lib/gaupol/base/tags/subviewer2.py:
	  Removed docs from these files as we now have the elsewhere.

2006-01-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/header-dialog.glade:
	* data/ui/menubar.xml:
	* lib/gaupol/gtk/dialogs/header.py:
	* lib/gaupol/base/delegates/filesave.py:
	* lib/gaupol/base/files/microdvd.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/files/subrip.py:
	* lib/gaupol/gtk/delegates/filesave.py: