@@ -739,3 +739,28 @@ def get_language(code):
     Raise KeyError is language not found.
     """
     return gettext.dgettext('iso_639', langs[code[:2]])
+
+
+if __name__ == '__main__':
+
+    country = get_country('af_ZA')
+    assert country == gettext.dgettext('iso_3166', 'South Africa')
+
+    country = get_country('af')
+    assert country is None
+
+    name    = get_descriptive_name('af_ZA')
+    country = gettext.dgettext('iso_3166', 'South Africa')
+    lang    = gettext.dgettext('iso_639', 'Afrikaans')
+    assert name == _('%s (%s)') % (lang, country)
+
+    name = get_descriptive_name('af')
+    lang = gettext.dgettext('iso_639', 'Afrikaans')
+    assert name == lang
+
+    lang = get_language('af_ZA')
+    assert lang == gettext.dgettext('iso_639', 'Afrikaans')
+
+
+
+
